# chvmp_robots_ros2

configs/spot_config/: CMakeLists.txt  package.xml
configs/spot_config/config/autonomy/: navigation.yaml  slam.yaml
configs/spot_config/config/ros_control/: ros_control.yaml
configs/spot_config/launch/: bringup.launch  bringup.launch.py  gazebo.launch  gazebo.launch.py  navigate.launch  navigate.launch.py  slam.launch  slam.launch.py  spawn_robot.launch
configs/spot_config/xacro/: robot.xacro
